force-app/main/default/objects/Opportunity/fields/Unarchived_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Unarchived_Date_Time__c</fullName>
    <label>Unarchived Date Time</label>
    <type>DateTime</type>
</CustomField>