force-app/main/default/objects/Opportunity/fields/Unblacklist_Rejected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Unblacklist_Rejected_Date_Time__c</fullName>
    <label>Unblacklist Rejected Date/Time</label>
    <type>DateTime</type>
</CustomField>