force-app/main/default/objects/Opportunity/fields/Unblacklisted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Unblacklisted_Date_Time__c</fullName>
    <label>Unblacklisted Date Time</label>
    <type>DateTime</type>
</CustomField>