force-app/main/default/objects/Opportunity/fields/UPRN__c.field-meta.xml
<CustomField>
    <fullName>UPRN__c</fullName>
    <formula>Property__r.UPRN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UPRN</label>
    <type>Text</type>
</CustomField>