force-app/main/default/objects/Opportunity/fields/Vendor_1__c.field-meta.xml
<CustomField>
    <fullName>Vendor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Vendor 1)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>