force-app/main/default/objects/Opportunity/fields/Vendor_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_1_Email__c</fullName>
    <formula>Vendor_1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor 1 Email</label>
    <type>Text</type>
</CustomField>