force-app/main/default/objects/Opportunity/fields/Vendor_1_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Vendor_1_Mobile__c</fullName>
    <formula>Vendor_1__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor 1 Mobile</label>
    <type>Text</type>
</CustomField>