force-app/main/default/objects/Opportunity/fields/Vendor_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_1_Name__c</fullName>
    <formula>Vendor_1__r.FirstName &amp; " " &amp; Vendor_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor 1 Name</label>
    <type>Text</type>
</CustomField>