force-app/main/default/objects/Opportunity/fields/Vendor_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_1_Phone__c</fullName>
    <formula>Vendor_1__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor 1 Phone</label>
    <type>Text</type>
</CustomField>