force-app/main/default/objects/Opportunity/fields/Vendor_2__c.field-meta.xml
<CustomField>
    <fullName>Vendor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>