force-app/main/default/objects/Opportunity/fields/Vendor_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_2_Email__c</fullName>
    <formula>Vendor_2__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor 2 Email</label>
    <type>Text</type>
</CustomField>