force-app/main/default/objects/Opportunity/fields/Vendor_2_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Vendor_2_Mobile__c</fullName>
    <formula>Vendor_2__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor 2 Mobile</label>
    <type>Text</type>
</CustomField>