force-app/main/default/objects/Opportunity/fields/Vendor_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_2_Phone__c</fullName>
    <formula>Vendor_2__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor 2 Phone</label>
    <type>Text</type>
</CustomField>