force-app/main/default/objects/Opportunity/fields/Vendor_Contact_Display__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Display__c</fullName>
    <label>Vendor Contact Display</label>
    <type>Text</type>
    <formula>Vendor_1_Email__c
&amp; IF(AND(NOT(ISBLANK(Vendor_1_Email__c)), OR(NOT(ISBLANK(Vendor_1_Mobile__c)), NOT(ISBLANK(Vendor_1_Phone__c)))), "   ", "")
&amp; Vendor_1_Mobile__c
&amp; IF(AND(NOT(ISBLANK(Vendor_1_Mobile__c)), NOT(ISBLANK(Vendor_1_Phone__c))), ", ", "")
&amp; Vendor_1_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <description>Formatted vendor contact: email, mobile, phone - comma separated, only showing available values</description>
</CustomField>