force-app/main/default/objects/Opportunity/fields/Vendor_Last_Call_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Last_Call_Datetime__c</fullName>
    <label>Vendor Last Call Datetime</label>
    <type>DateTime</type>
</CustomField>