force-app/main/default/objects/Opportunity/fields/Vendor_OLD__c.field-meta.xml
<CustomField>
    <fullName>Vendor_OLD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor OLD</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Vendor 2)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>