force-app/main/default/objects/Opportunity/fields/Wed_AM__c.field-meta.xml
<CustomField>
    <fullName>Wed_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wed - AM</label>
    <type>Checkbox</type>
</CustomField>