force-app/main/default/objects/Opportunity/fields/Wed_PM__c.field-meta.xml
<CustomField>
    <fullName>Wed_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wed - PM</label>
    <type>Checkbox</type>
</CustomField>