force-app/main/default/objects/Opportunity/fields/X1st_call__c.field-meta.xml
<CustomField>
    <fullName>X1st_call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st call</label>
    <type>Checkbox</type>
</CustomField>