force-app/main/default/objects/Opportunity/fields/X2nd_call__c.field-meta.xml
<CustomField>
    <fullName>X2nd_call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Call</label>
    <type>Checkbox</type>
</CustomField>