force-app/main/default/objects/Opportunity/fields/X3rd_Call__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Call</label>
    <type>Checkbox</type>
</CustomField>