force-app/main/default/objects/Opportunity/recordTypes/Archived.recordType-meta.xml
<RecordType>
    <fullName>Archived</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Completed</businessProcess>
    <label>Archived</label>
</RecordType>