force-app/main/default/objects/Opportunity/recordTypes/Assisted_Sales.recordType-meta.xml
<RecordType>
    <fullName>Assisted_Sales</fullName>
    <active>true</active>
    <businessProcess>Assisted Sales - Sales Process</businessProcess>
    <label>Assisted Sales</label>
</RecordType>