force-app/main/default/objects/Opportunity/recordTypes/Events_and_Support.recordType-meta.xml
<RecordType>
    <fullName>Events_and_Support</fullName>
    <active>true</active>
    <businessProcess>Events and Support - Sales Process</businessProcess>
    <label>Events and Support</label>
</RecordType>