force-app/main/default/objects/Opportunity/recordTypes/New_Home_Sales.recordType-meta.xml
<RecordType>
    <fullName>New_Home_Sales</fullName>
    <active>true</active>
    <businessProcess>New Home Sales - Sales Process</businessProcess>
    <label>New Home Sales</label>
</RecordType>