force-app/main/default/objects/Opportunity/recordTypes/Part_Exchange_Applications.recordType-meta.xml
<RecordType>
    <fullName>Part_Exchange_Applications</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Sales Process</businessProcess>
    <label>Part Exchange - Applications</label>
</RecordType>