force-app/main/default/objects/Opportunity/recordTypes/Part_Exchange_Availability_Report.recordType-meta.xml
<RecordType>
    <fullName>Part_Exchange_Availability_Report</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Availability Report</businessProcess>
    <label>Part Exchange - Availability Report</label>
</RecordType>