force-app/main/default/objects/Opportunity/recordTypes/Part_Exchange_Commission.recordType-meta.xml
<RecordType>
    <fullName>Part_Exchange_Commission</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Commission</businessProcess>
    <label>Part Exchange - Commission</label>
</RecordType>