force-app/main/default/objects/Opportunity/recordTypes/Part_Exchange_Completed.recordType-meta.xml
<RecordType>
    <fullName>Part_Exchange_Completed</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Completed</businessProcess>
    <label>Part Exchange - Completed</label>
</RecordType>