force-app/main/default/objects/Opportunity/recordTypes/Part_Exchange_Instruction.recordType-meta.xml
<RecordType>
    <fullName>Part_Exchange_Instruction</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Instruction</businessProcess>
    <label>Part Exchange - Instruction</label>
</RecordType>