force-app/main/default/objects/Opportunity/recordTypes/Part_Exchange_Offers.recordType-meta.xml
<RecordType>
    <fullName>Part_Exchange_Offers</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Offers</businessProcess>
    <label>Part Exchange - Offers</label>
</RecordType>