force-app/main/default/objects/Opportunity/recordTypes/Part_Exchange_Sales_Progression.recordType-meta.xml
<RecordType>
    <fullName>Part_Exchange_Sales_Progression</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Sales Progression</businessProcess>
    <label>Part Exchange - Sales Progression</label>
</RecordType>