force-app/main/default/objects/Opportunity/recordTypes/Part_Exchange_Valuations_In_Process.recordType-meta.xml
<RecordType>
    <fullName>Part_Exchange_Valuations_In_Process</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Valuations In Process</businessProcess>
    <label>Part Exchange - Valuations In Process</label>
</RecordType>