force-app/main/default/objects/Opportunity/recordTypes/Unknown.recordType-meta.xml
<RecordType>
    <fullName>Unknown</fullName>
    <active>true</active>
    <businessProcess>Part Exchange - Sales Process</businessProcess>
    <label>Unknown</label>
</RecordType>