force-app/main/default/objects/Opportunity/validationRules/Agent_3_Restrict_Past_Date_Appointment.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_3_Restrict_Past_Date_Appointment</fullName>
    <active>false</active>
    <errorConditionFormula>Agent_3_Appointment__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Agent_1_Appointment__c</errorDisplayField>
    <errorMessage>The appointment date can not be of a past or current date/time. Please try again with future date and time.</errorMessage>
</ValidationRule>