force-app/main/default/objects/Opportunity/validationRules/Next_Available_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Available_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Next_Available_Date__c  &lt;= today()</errorConditionFormula>
    <errorDisplayField>Next_Available_Date__c</errorDisplayField>
    <errorMessage>Please add a future date for next availability.</errorMessage>
</ValidationRule>