force-app/main/default/objects/Opportunity/listViews/Leeds_Data_only.listView-meta.xml
<ListView>
    <fullName>Leeds_Data_only</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Leeds Data only</label>
</ListView>