force-app/main/default/objects/Opportunity/listViews/X1_Applications.listView-meta.xml
<ListView>
    <fullName>X1_Applications</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>House_Builder__c</columns>
    <columns>Plot__c</columns>
    <columns>Application_Reference_Number__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>NHS_Sales_Advisor__c</columns>
    <columns>NHS_Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>1 - Applications</label>
</ListView>