force-app/main/default/objects/Opportunity/listViews/X_Archived.listView-meta.xml
<ListView>
    <fullName>X_Archived</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>House_Builder__c</columns>
    <columns>Plot__c</columns>
    <columns>Application_Reference_Number__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Archived</value>
    </filters>
    <label>X - Archived</label>
</ListView>